src/test/resources/fdl/cocos/invalid/InvalidCommand.fdl
FDL InvalidCommand {
  EQUATION m^^{.} = V^^{.} * @peter_{"s"}
  WITH:
    ALIASES:
      m^^{.} = "Massestrom";
}